fixed sections spacing, added h2 animation and changed scroll animation

--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -14,7 +14,7 @@
 	background-size: contain;
 	background-position-y: center;
 	background-position-x: right;
-	height: 60vh;
+	min-height: 100vh;
 	// border: 1px solid red;
 
 	// .wrapper {
