--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -95,7 +95,7 @@
 // }
 
 .projects {
-	min-height: 60vh;
+	// min-height: 60vh;
 	background-image: url("../assets/images/projects.png");
 	// background-repeat: no-repeat;
 	background-size: contain;
@@ -159,8 +159,8 @@
 		// color: transparent;
 		// -webkit-background-clip: text;
 		// background-clip: text;
-		padding: 5px 20px;
-		border-radius: 13px;
+		padding: 7px 20px 5px;
+		border-radius: 14px;
 		// color: white;
 		font-family: "Migra Extrabold", serif;
 		transition: 0.2s;
